# NBFC-Plasmoid

./: .gitignore  CMakeLists.txt  Messages.sh  README  README.md
.github/: copilot-instructions.md
src/: CMakeLists.txt  fan.cpp  fan.h  fanmodel.cpp  fanmodel.h  omenctl.cpp  omenctl.h  roothelper.cpp  roothelper.h  setfanspeed.txt  setgovernor.txt
src/package/: metadata.json
src/package/contents/ui/: main.qml  main_old.qml
